packages/build/tests/error/build/fixtures/exception_props/plugin.js
module.exports = {
  async onPreBuild() {
    const error = new Error('test')
    error.test = true
    throw error
  },
}
